# rag-enterprise-saas

./: .gitignore  Caddyfile  Dockerfile  alembic.ini  docker-compose.yml  litellm_config.yaml  manage.sh  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_user_metadata.py  dc2cbddabb63_initial_schema.py
src/: main.py
src/api/: main.py
src/api/v1/: webhooks.py
src/auth/: api_keys.py  dependencies.py  exceptions.py  jwt.py  middleware.py  models.py  permissions.py  router.py  tenant.py  webhooks.py
src/billing/: client.py  constants.py  metering.py  quotas.py  router.py  schemas.py  service.py  webhooks.py
src/cache/: dependencies.py  query_cache.py  router.py
src/connectors/: base.py  encryption.py  oauth.py  registry.py  router.py  schemas.py  service.py  sync.py
src/connectors/providers/: confluence.py  google_drive.py  s3.py
src/core/: audit.py  config.py  database.py  tenant.py
src/documents/: batch.py  batch_router.py  chunker.py  dedup.py  parser.py  router.py  schemas.py  webhooks.py
src/embeddings/: batch.py  cache.py  client.py
src/generation/: citations.py  context.py  conversation_router.py  conversations.py  llm.py  prompts.py  reranker.py  router.py  schemas.py  service.py  streaming.py
src/jobs/: tasks.py  worker.py
src/models/: __init__.py  api_key.py  audit.py  base.py  billing.py  connector.py  conversation.py  document.py  embedding_cache.py  tenant.py
src/processing/: chunk_validator.py  incremental.py  metadata_extractor.py
src/retrieval/: analytics.py  filters.py  highlighting.py  multi_query.py  query_decomposer.py  router.py  schemas.py  search.py
src/storage/: minio.py
